<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.winsion.component.basic.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBackButton="false"
        app:showConfirmButton="false"
        app:titleText="@string/title_scene" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/basic_d10">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_grid"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="36"
                    app:moduleIcon="@drawable/scene_ic_grid"
                    app:moduleName="@string/title_grid" />

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_main_passenger"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_main_passenger"
                    app:moduleName="@string/title_key_passenger" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d5"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_area_broadcast"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_area_broadcast"
                    app:moduleName="@string/title_area_broadcast" />

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_broadcast"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="36"
                    app:moduleIcon="@drawable/scene_ic_passenger_broadcast"
                    app:moduleName="@string/title_passenger_broadcast" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d5"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_transfer"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="36"
                    app:moduleIcon="@drawable/scene_ic_transfer"
                    app:moduleName="@string/title_transfer" />

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_light"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_light"
                    app:moduleName="@string/title_light" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d5"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_elevator"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_elevator"
                    app:moduleName="@string/title_elevator" />

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_water"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="36"
                    app:moduleIcon="@drawable/scene_ic_water"
                    app:moduleName="@string/title_water" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll4"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d5"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_video"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="36"
                    app:moduleIcon="@drawable/scene_ic_video1"
                    app:moduleName="@string/title_video" />

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_door"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_door"
                    app:moduleName="@string/title_door" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll5"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d5"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_air_conditioner"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_air_conditioner"
                    app:moduleName="@string/title_air_conditioner" />

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_air_handing"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="36"
                    app:moduleIcon="@drawable/scene_ic_air_handing"
                    app:moduleName="@string/title_air_handing" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll6"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d5"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_pump"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="36"
                    app:moduleIcon="@drawable/scene_ic_pump"
                    app:moduleName="@string/title_pump" />

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_cooling_tower"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_cooling_tower"
                    app:moduleName="@string/title_cooling_tower" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll7"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d5"
                android:orientation="horizontal">

                <com.winsion.component.basic.view.ModuleView
                    android:id="@+id/mv_lost"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_marginEnd="@dimen/basic_d5"
                    android:layout_weight="31"
                    app:moduleIcon="@drawable/scene_ic_lost"
                    app:moduleName="@string/title_lost" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/basic_d120"
                    android:layout_weight="36" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>